GTK4/package/gtkwidget.pas

(* Const before type ignored *)
procedure gtk_widget_remove_css_class(widget:PGtkWidget; css_class:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
function gtk_widget_has_css_class(widget:PGtkWidget; css_class:Pchar):Tgboolean;cdecl;external gtklib;
function gtk_widget_get_css_classes(widget:PGtkWidget):PPchar;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_set_css_classes(widget:PGtkWidget; classes:PPchar);cdecl;external gtklib;
{*
 * GtkWidgetActionActivateFunc:
 * @widget: the widget to which the action belongs
 * @action_name: the action name
 * @parameter: parameter for activation
 *
 * The type of the callback functions used for activating
 * actions installed with gtk_widget_class_install_action().
 *
 * The @parameter must match the @parameter_type of the action.
  }
(* Const before type ignored *)
type

  TGtkWidgetActionActivateFunc = procedure (widget:PGtkWidget; action_name:Pchar; parameter:PGVariant);cdecl;
(* Const before type ignored *)
(* Const before type ignored *)

procedure gtk_widget_class_install_action(widget_class:PGtkWidgetClass; action_name:Pchar; parameter_type:Pchar; activate:TGtkWidgetActionActivateFunc);cdecl;external gtklib;
(* Const before type ignored *)
(* Const before type ignored *)
procedure gtk_widget_class_install_property_action(widget_class:PGtkWidgetClass; action_name:Pchar; property_name:Pchar);cdecl;external gtklib;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gtk_widget_class_query_action(widget_class:PGtkWidgetClass; index_:Tguint; owner:PGType; action_name:PPchar; parameter_type:PPGVariantType; 
           property_name:PPchar):Tgboolean;cdecl;external gtklib;
(* Const before type ignored *)
procedure gtk_widget_action_set_enabled(widget:PGtkWidget; action_name:Pchar; enabled:Tgboolean);cdecl;external gtklib;
procedure gtk_widget_class_set_accessible_role(widget_class:PGtkWidgetClass; accessible_role:TGtkAccessibleRole);cdecl;external gtklib;
function gtk_widget_class_get_accessible_role(widget_class:PGtkWidgetClass):TGtkAccessibleRole;cdecl;external gtklib;

{ was #define dname def_expr }
function GTK_TYPE_REQUISITION : TGType;

// === Konventiert am: 10-7-24 19:22:54 ===

function GTK_TYPE_WIDGET : TGType;
function GTK_WIDGET(widget : Pointer) : PGtkWidget;
function GTK_WIDGET_CLASS(klass : Pointer) : PGtkWidgetClass;
function GTK_IS_WIDGET(widget : Pointer) : Tgboolean;
function GTK_IS_WIDGET_CLASS(klass : Pointer) : Tgboolean;
function GTK_WIDGET_GET_CLASS(obj : Pointer) : PGtkWidgetClass;

implementation

function GTK_TYPE_WIDGET : TGType;
  begin
    GTK_TYPE_WIDGET:=gtk_widget_get_type;
  end;

function GTK_WIDGET(widget: Pointer): PGtkWidget;
begin
  Result := PGtkWidget(g_type_check_instance_cast(widget, GTK_TYPE_WIDGET));
end;

function GTK_WIDGET_CLASS(klass : Pointer) : PGtkWidgetClass;
begin
  Result := PGtkWidgetClass(g_type_check_class_cast(klass, GTK_TYPE_WIDGET));
end;

function GTK_IS_WIDGET(widget: Pointer): Tgboolean;
begin
  Result := g_type_check_instance_is_a(widget,  GTK_TYPE_WIDGET);
end;

function GTK_IS_WIDGET_CLASS(klass : Pointer) : Tgboolean;
begin
  Result := g_type_check_class_is_a(klass,  GTK_TYPE_WIDGET);
end;

function GTK_WIDGET_GET_CLASS(obj : Pointer) : PGtkWidgetClass;
begin
  Result := PGtkWidgetClass(PGTypeInstance(obj)^.g_class);
end;


function GTK_TYPE_REQUISITION: TGType; { return type might be wrong }
  begin
    GTK_TYPE_REQUISITION:=gtk_requisition_get_type;
  end;


end.
